css/style.css
/* ... */
/* EXTRA */

.pdt {
    padding-top: 5rem;
}

.pdt1 {
    padding-top: .5rem;
}

.service-boxes {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: flex-start;
}

.pricing-block:hover {
    cursor: pointer;
}

.navbar-aside p {
    margin: 5px;
}

.bottom-nav {
    display: flex;
    justify-content: baseline;
    align-items: last baseline;
}

.review-arrows {
    display: inline-flex;
    margin-top: 1.5rem;
}

.review-arrow {
    padding: 1rem 1.3rem;
    background-color: #ccc;
    margin: .2rem;
    color: white;
    font-weight: bold;
    transition: transform 0.3s ease;
}

.review-arrow:hover {
    cursor: pointer;
}

.review-arrow-left {
    margin-right: .25rem;
}

.review-arrow-right {
    margin-left: .25rem;
}

.review-arrow-left:hover {
    transform: translateX(-10px);
    margin-right: .5rem;
}

.review-arrow-right:hover {
    transform: translateX(10px);
    margin-left: .5rem;
}

.main-top b, .main-bottom {
    content: "";
}

.section-heading h2 {
    width: 60%;
}

